# explore-python

./: README.md  main.py  pyproject.toml
blueprints/basic_endpoints/: __init__.py
blueprints/documented_endpoints/: __init__.py
blueprints/documented_endpoints/entities/: __init__.py
blueprints/documented_endpoints/hello/: __init__.py
blueprints/documented_endpoints/jinja_template/: __init__.py
blueprints/jinja_endpoints/: __init__.py
static/: template.css
templates/: template.html
