[tool.poetry]
name = "explore-python"
version = "0.1.0"
description = ""
authors = ["Nuno Alves <nunorralves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = ""
flask-restplus = "^0.13.0"
Werkzeug = "0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
